Fixed input alignment (Chrome bug?)

--- a/source/styles/modules/gotowall/navigator.styl
+++ b/source/styles/modules/gotowall/navigator.styl
@@ -2,7 +2,8 @@
   font-size 24px
   font-family 'Roboto Slab', serif
   font-weight 400
-  > *
+  > *,
+  > .segment > *
     display inline-block
     height 50px
     vertical-align top
@@ -23,6 +24,9 @@
         border 1px solid #BBBBBB
         border-radius 3px
         max-width 230px
+        vertical-align top
+        top 4px
+        position relative
         &:focus
           border-color #9263AC
           border-bottom-width 3px
